# iree-experiments

./: CMakeLists.txt
binarysize/: CMakeLists.txt  binarysize.c  binarysize_static.c  notes.md
models/: simple_mul.mlir
